umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrides_h2s.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "S#h2#n2"} :bonds [] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "S#h2#n2"} :bonds [] :charge 0 :spin "#u0 #s1"}}}
